# guardianes-verificados-ia

./: .gitignore  README.md  demo_rojo_verde.py  pyproject.toml  run_tests.py
.github/workflows/: ci.yml
guardianes/: __init__.py  __main__.py  banco.py  guardian_frescura.py  guardian_hook.py  guardian_recurso.py  mutador.py  salud_minima.py  vigilancia_diaria.py
src/: salud_minima.py  verificador_guardianes.py  vigilancia_diaria.py
tests/: banco_guardianes.py  test_contrato.py
