[build-system]
requires = ["setuptools>=77"]        # PEP 639 license expression
build-backend = "setuptools.build_meta"

[project]
name = "guardianes-verificados-ia"
version = "0.2.0"
description = "Who tests the guardrails? An exit-code contract, banks proven in red, and mutation testing for your guardrails."
readme = "README.md"
requires-python = ">=3.9"           # uses ast.unparse
dependencies = []                    # standard library only, on purpose
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Juan Luis León Rodríguez" }]
keywords = ["guardrails", "mutation-testing", "hooks", "exit-code", "verification", "ai-agents"]

[project.scripts]
guardianes = "guardianes.__main__:main"

[tool.setuptools]
packages = ["guardianes"]
